tests/ui/range/range_traits-3.stderr
error[E0204]: the trait `Copy` cannot be implemented for this type
  --> $DIR/range_traits-3.rs:3:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^
LL | struct R(RangeFrom<usize>);
   |          ---------------- this field does not implement `Copy`
   |
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0204`.
